# hs_rs_hello_world

./: .gitignore  LICENSE  README.md  flake.nix  hello.cabal
rust/: Cargo.toml
