cabal-version: 3.0
name: hello
version: 1.0.0.0
license-file: LICENSE
copyright: (c) Michivi
author: Michivi
homepage: https://blog.michivi.com/
build-type: Custom

flag external_lib
  description:       Use external library (don't compile automatically)
  default:           False

custom-setup
  setup-depends:
      base >= 4.7 && < 5
    , Cabal >= 3.0.0.0
    , directory >= 1.3.6.0
    , filepath >= 1.3.0.2

executable hello
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base >= 4.14 && < 5
  extra-libraries: rs_hello_world
  default-language: Haskell2010
